[tool.poetry]
name = "protoсols"
version = "0.1.0"
description = ""
authors = ["shocknik <teilor2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^0.8.11"
peewee = "^3.17.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
